fixes scrollbar in browser

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -136,15 +136,17 @@ section {
 /* for custom scrollbar for webkit browser*/
 
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px linear-gradient(to right, #FF9900, rgb(20, 110, 180));
 }
 
 ::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 16px rgba(0, 0, 0, 0.3);
+  background: linear-gradient(to right, #FF9900, rgb(20, 110, 180));
+  border-radius: 5px;
 }
 
 .navbar-light {
@@ -216,30 +218,6 @@ section {
   background-color: rgba(204, 243, 177, 0.938);
 }
 
-/* 
-#connect:before, #connect:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 2px;
-  width: 0;
-  background: black;
-  transition: 800ms ease all;
-}
-
-#connect:after {
-  right: inherit;
-  top: inherit;
-  left: 0;
-  bottom: 0;
-}
-
-#connect:hover:before, #connect:hover:after {
-  width: 100%;
-  transition: 1000ms ease all;
-} */
-
 .modal-body {
   position: relative;
   -webkit-box-flex: 1;
@@ -256,8 +234,6 @@ section {
   flex-direction: column;
   width: 100%;
   pointer-events: auto;
-
-
   background: linear-gradient(to right, #FF9900, rgb(20, 110, 180));
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, .2);
@@ -277,7 +253,6 @@ section {
 footer.bg-light {
   background: linear-gradient(to right, #FF9900, rgb(20, 110, 180));
 }
-
 
 @font-face {
   font-family: 'icomoon';
